
TESTS = fastaclean.test.sh fastaclip.test.sh fastacomposition.test.sh \
        fastadiff.test.sh fastaexpode.test.sh                         \
        fastaindex.fastafetch.test.sh fastalength.test.sh             \
        fastanrdb.test.sh fastaoverlap.test.sh fastarefomat.test.sh   \
        fastaremove.test.sh fastarevcomp.test.sh                      \
        fastasoftmask.fastahardmask.test.sh fastasort.test.sh         \
        fastasplit.test.sh fastasubseq.test.sh fastatranslate.test.sh \
        fastavalidcds.test.sh

EXTRA_DIST = $(TESTS)

# Files to clear away

MAINTAINERCLEANFILES = Makefile.in

